--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,18 @@
+lib-cov
+*.seed
+*.log
+*.csv
+*.dat
+*.out
+*.pid
+*.gz
+
+pids
+logs
+results
+
+node_modules
+npm-debug.log
+
 *.sublime-project
-node_modules/
-logs/
 *.bak
